update gradle to 8.7 update agp to 8.5.0 update min sdk version to 19 update build tools version and target sdk version to 34 remove some code that existed only for compatibility with older android versions

--- a/emulatorview/build.gradle
+++ b/emulatorview/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
+
+    namespace "jackpal.androidterm.emulatorview"
 
     defaultConfig {
-        minSdkVersion 4
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 34
     }
 
     buildTypes {
