--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-task wrapper (type:Wrapper) {
-    gradleVersion = '2.2.1'
-    distributionUrl = 'https://services.gradle.org/distributions/gradle-2.2.1-all.zip'
-}
-
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+        classpath 'com.android.tools.build:gradle:8.5.0'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        maven { url "https://jitpack.io" }
     }
-}
-
-subprojects {
-    def androidHome
-
-    if ((androidHome = System.env.'ANDROID_HOME')
-            && (androidHome = androidHome as File).exists()
-            && androidHome.canWrite())
-        apply plugin: 'android-sdk-manager'
 }
