--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,3 @@
-include ':emulatorview', ':libtermexec'
+include ':emulatorview'
+include ':libtermexec'
 include ':term'
-include ':samples:intents'
-include ':samples:pathbroadcasts'
-include ':samples:telnet'
